--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "concurrently": "^6.2.1",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
         "express": "^4.17.1",
+        "multer": "^1.4.3",
+        "mysql": "^2.18.1",
         "prettier": "^2.3.2"
     },
     "devDependencies": {
         "eslint": "^7.11.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.24.1",
-        "eslint-plugin-react": "^7.24.0"
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.1",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0"
     }
 }
