--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,9 @@
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
