--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
     "name": "AnkiClone",
     "version": "1.0.0",
     "scripts": {
-        "client": "cd client && npm start",
-        "server": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "server": "nodemon server.js --ignore client",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
     },
     "dependencies": {
         "body-parser": "^1.19.0",
         "concurrently": "^6.2.1",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
