--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "express": "^4.17.1",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
+        "mysql2": "^2.3.0",
         "prettier": "^2.3.2"
     },
     "devDependencies": {
