--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "AnkiClone",
+    "name": "Tango",
     "version": "1.0.0",
     "scripts": {
         "client": "npm start --prefix client",
