--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.0",
+        "pbkdf2-password": "^1.2.1",
         "prettier": "^2.3.2"
     },
     "devDependencies": {
