--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tango",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,21 +11,27 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "classnames": "^2.3.1",
-    "clsx": "^1.1.1",
-    "http-proxy-middleware": "^0.19.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.23",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-window": "^1.8.5",
+    "axios": "^0.21.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-font-loader": "^1.1.0",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-redux-typescript": "^3.0.0-rc.3",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
+    "recoil": "^0.4.1",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
