--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
     "name": "Tango",
-    "version": "1.0.0",
+    "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "client": "npm start --prefix client",
-        "server": "nodemon server.js --ignore client",
-        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+        "client": "npm run start --prefix client",
+        "build:watch": "cd server && tsc --watch",
+        "server": "npm run build:watch && nodemon server.js --ignore client",
+        "dev": "concurrently --kill-others-on-fail \"npm run server \" \"npm run client\""
     },
     "dependencies": {
-        "body-parser": "^1.19.0",
+        "@types/express": "^4.17.13",
+        "@types/multer": "^1.4.7",
         "concurrently": "^6.2.1",
-        "cors": "^2.8.5",
+        "create-react-app": "^4.0.3",
         "express": "^4.17.1",
         "multer": "^1.4.3",
-        "mysql": "^2.18.1",
         "mysql2": "^2.3.0",
         "pbkdf2-password": "^1.2.1",
-        "prettier": "^2.3.2"
+        "typescript": "^4.4.2"
     },
     "devDependencies": {
-        "eslint": "^7.11.0",
+        "@typescript-eslint/eslint-plugin": "^4.30.0",
+        "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.24.1",
+        "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react": "^7.25.1",
         "eslint-plugin-react-hooks": "^4.2.0"
     }
 }
