--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "client": "npm run start --prefix client",
         "build:watch": "cd server && tsc --watch",
-        "server": "npm run build:watch && nodemon server.js --ignore client",
-        "dev": "concurrently --kill-others-on-fail \"npm run server \" \"npm run client\""
+        "server": "cd server/dist && nodemon server.js --ignore client",
+        "dev": "concurrently --kill-others-on-fail \"npm run build:watch\" \"npm run server \" \"npm run client\""
     },
     "dependencies": {
         "@types/express": "^4.17.13",
