--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
         "@types/react-redux": "^7.1.18",
         "@types/react-router-dom": "^5.1.8",
         "@types/react-window": "^1.8.5",
+        "@types/styled-components": "^5.1.14",
         "axios": "^0.21.2",
+        "classnames": "^2.3.1",
         "http-proxy-middleware": "^0.19.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -32,6 +34,8 @@
         "redux-persist": "^6.0.0",
         "redux-promise": "^0.6.0",
         "redux-thunk": "^2.3.0",
+        "styled-components": "^5.3.1",
+        "styled-normalize": "^8.0.7",
         "typescript": "^4.4.2",
         "web-vitals": "^1.1.2"
     },
